Finished Day 2 Updates

--- a/day2/assignments/Day2-Homework_Python.ipynb
+++ b/day2/assignments/Day2-Homework_Python.ipynb
@@ -13,29 +13,45 @@
    "id": "96e5ef37",
    "metadata": {},
    "source": [
-    "1. Here are 25 numbers drawn from a normal distribution. Calculate the mean, standard deviation, and variance of the set. Do the mean calculation manually, and then use the built-in functions provided in the **statistics** module for the others.\n",
+    "1. Here are 25 numbers drawn from a normal distribution. Calculate the mean, standard deviation, and variance of the set.\n",
     "\n",
-    "**Hint**: The functions *sum*, *len*, *statistics.stdev*, and *statistics.variance* will be useful. Use the *help()* command to learn more about them, if needed."
+    "    **Do the mean calculation manually, and then use the built-in functions provided in the **statistics** module for the others.**\n",
+    "\n",
+    "    **Hint**: The functions `sum`, `len`, `statistics.stdev`, and `statistics.variance` will be useful.\n",
+    "    Use the `help` function to learn more about them, if needed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "68e51639",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
     "import statistics\n",
     "\n",
     "#help(len)\n",
     " \n",
-    "my_samples = [8.343003931051403, 10.983139316643154, 10.028263738536845, 10.030605626392367, 10.479262011457655, 11.003444821427529,\n",
-    "  11.15941163985765, 8.572931560317459, 10.734225011659504, 9.42236611877579, 9.428287552964232, 12.751301969731728, 9.175698518027408,\n",
-    "   13.277810638831117, 10.36739357419826, 9.586251108314395, 10.427168797319448, 9.598709847965262, 8.687074988292876, 9.964044897601617,\n",
-    "    10.452622225611169, 10.180824722303885, 9.671712590995602, 11.232140649632495, 12.024224902990818]\n",
+    "def sample_normal(mean, sd, n = 1, seed = 42):\n",
+    "    \"\"\"Draw n samples from a normal distribution with given mean and standard deviation\"\"\"\n",
+    "    random.seed(seed)\n",
+    "    return [random.normalvariate(mean, sd) for _ in range(n)]\n",
+    "\n",
+    "my_samples = sample_normal(10, 1, n=25) \n",
+    "print(my_samples) \n",
     " \n",
-    " ## your code here\n",
-    "\n"
+    "## your manual mean calculation code here\n",
+    "manual_mean = 0\n",
+    "\n",
+    "print(manual_mean)\n",
+    "\n",
+    "## Calculate mean, sd, and variance using statistics module\n",
+    "mean = 0\n",
+    "sd = 0\n",
+    "var = 0\n",
+    "\n",
+    "print((mean, sd, var))"
    ]
   },
   {
@@ -73,7 +89,16 @@
    "id": "be5d15c3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calc_molarity(plasmid_length, conc):\n",
+    "    mol = 0\n",
+    "    return mol\n",
+    "\n",
+    "\n",
+    "# Test your function with the above values\n",
+    "plasmid_length = 1354\n",
+    "conc = 1.85"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,21 +120,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2fc6c680",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 1, 4, 9, 16, 25, 36, 49, 64]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -137,6 +151,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf3ad1cf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "58f31c82",
    "metadata": {},
@@ -153,15 +175,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Here are the range of p's you will need (note 0<p<1 and the Set P variable is capitalized.)\n",
-    "P = [0.0,0.2,0.33,0.5,0.66666667,0.99]\n",
+    "# Here are the range of p's you will need (note 0<p<1 and the Set P variable is capitalized.)\n",
+    "P = [0.0, 0.2, 0.33, 0.5, 0.66666667, 0.99]\n",
     "\n",
-    "#First define a function q() that takes p as an argument and returns q\n",
-    "def q(p):\n",
-    "    ??\n",
     "\n",
-    "#Using list comprehension and your newly created q() function translate the above formula and calculate the solution over the values in P\n",
-    "\n"
+    "# First define a function `q` that takes p as an argument and returns q (ie. q=1-p)\n",
+    "def q(p: float):\n",
+    "    return 0.0\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ceefacd0",
+   "metadata": {},
+   "source": [
+    "Using either a list comprehension or a for-loop along with your newly created `q` function, \n",
+    "\n",
+    "**translate the above formula and calculate the solution over the values in `P`**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a762b758",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Below is a pseudocode template to help you get started\n",
+    "\n",
+    "# for p in P:\n",
+    "#     Find q for given p\n",
+    "#     x = ??? # put your formula here using p and q\n",
+    "#     print(x)"
    ]
   },
   {
@@ -176,7 +221,9 @@
    "cell_type": "markdown",
    "id": "dcf71e20",
    "metadata": {},
-   "source": []
+   "source": [
+    "Answer:"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -202,17 +249,27 @@
    "outputs": [],
    "source": [
     "def is_DNA():\n",
-    "    # Test whether a given sequence is a valid DNA sequence.\n",
+    "    \"\"\"Test whether a given sequence is a valid DNA sequence (ie contains only ATGC bases).\n",
+    "    Should return True or False depending on whether the sequence is valid.\"\"\"\n",
+    "    return is_valid\n",
+    "\n",
     "\n",
     "def calc_GC():\n",
-    "    # Calculate the GC percent of a DNA sequence\n",
+    "    \"\"\"Calculate the GC percent of the DNA sequence passed in as an argument.\"\"\"\n",
+    "    return gc\n",
     "\n",
-    "def revcomp():\n",
-    "    # Takes a DNA sequence and returns the reverse complement\n",
+    "def reverse_complement():\n",
+    "    \"\"\"Take a DNA sequence (seq) and return the reverse complement\n",
+    "    Hint: you can create a dictionary of complemntary bases and use that to look up the complement of a given base\n",
+    "    \"\"\"\n",
+    "    complements = {}\n",
+    "    return revcomp\n",
     "    \n",
     "def main():\n",
     "    # Your 'main' function to take an input sequence and process as described above\n",
-    "    \n",
+    "    return (gc, length, revcomp)\n",
+    "\n",
+    "# Test your main() function with the following sequence\n",
     "test_seq = 'CAGTACGATCTTGACGGTACG'\n",
     "print(main(test_seq))"
    ]
@@ -222,7 +279,7 @@
    "id": "d9a32675-3c1b-4f05-ae71-301c0aad6d4c",
    "metadata": {},
    "source": [
-    "c) Apply your function(s) to calculate the above parameters of interest (b) for the following of sequences."
+    "c) Apply your main function(s) to calculate the above parameters of interest (b) for the following of sequences in the `dna_seqs` list."
    ]
   },
   {
