--- a/day2/assignments/Day2-Lunch_Python.ipynb
+++ b/day2/assignments/Day2-Lunch_Python.ipynb
@@ -33,7 +33,7 @@
     "- Graduate program\n",
     "- Favorite model organism\n",
     "\n",
-    "Use the `keys` attribute to print out your dictionary keys.\n"
+    "Use the `keys` attribute/method of your dictionary object to print out your keys.\n"
    ]
   },
   {
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a new string stating your model organsism with the phrase \"is my favorite organism\" appended."
+    "Using the dictionary you created above, construct a new string stating your model organsism with the phrase \"is my favorite organism\" appended."
    ]
   },
   {
@@ -81,7 +81,11 @@
     "- Majors offered only by school A (difference)\n",
     "- Majors offered only by school B (difference)\n",
     "\n",
-    "**Hint**: lists are iterable, so can be used in for loops! Also remember the `in` operator.\n"
+    "**Hints**: \n",
+    "\n",
+    "- lists are iterable, so can be used in for loops! Also remember the `in` operator.\n",
+    "\n",
+    "- You could also try casting the lists as sets and using set methods to perform the above operations."
    ]
   },
   {
@@ -102,24 +106,21 @@
    "source": [
     "3. The first hundred amino acids of Green Fluorescent Protein (https://www.ncbi.nlm.nih.gov/protein/QAA95706.1) are MSKGEELFTGVVPILVELDGDVNGHKFSVSGEGEGDATYGKLTLKFICTTGKLPVPWPTLVTTFTYGVQCFSRYPDHMKQHDFFKSAMPEGYVQERTIFF. \n",
     "- How many Leucines (L) are there?\n",
-    "- How many times does any amino acid appear twice in a row? You don't need to keep track of which amino acids, just return the total number.\n",
+    "- How many times does any amino acid appear twice in a row? (You don't need to keep track of which amino acids, just return the total number.)\n",
     "\n",
-    "Hint: For the second part, we've initialized `repeat_count` with a value of zero, and `previous_character` to an empty string. Write a loop that compares each letter the the previous one. In each iteration, update the `previous_character` (every time) and the `repeat_count` (only if there is a hit!)"
+    "Hint: For the second part, we've initialized `repeat_count` with a value of zero, and `previous_character` to an empty string. Try a loop that updates these values."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "gfp_100 = 'MSKGEELFTGVVPILVELDGDVNGHKFSVSGEGEGDATYGKLTLKFICTTGKLPVPWPTLVTTFTYGVQCFSRYPDHMKQHDFFKSAMPEGYVQERTIFF'\n",
     "\n",
     "repeat_count = 0\n",
-    "previous_chararacter = ''\n",
-    "\n",
-    "\n",
-    "\n"
+    "previous_chararacter = ''\n"
    ]
   }
  ],
