--- a/day2/notebooks/Day2-Afternoon-Intro_to_Python_II.ipynb
+++ b/day2/notebooks/Day2-Afternoon-Intro_to_Python_II.ipynb
@@ -112,7 +112,7 @@
     "\n",
     "[x[1] for x in Folks] ## access the second element in each tuple\n",
     "\n",
-    "## Use list comprehension and fstring formating to write a sentence about each person using the info above and print it to the output cell.\n",
+    "## Use list comprehension and fstring formating to write a descriptive sentence about each person using the info above and print it to the output cell.\n",
     "??\n",
     "\n"
    ]
@@ -136,13 +136,13 @@
     "dnaLength = len(dna)\n",
     "print(f'Length of dna: {dnaLength}')\n",
     "\n",
-    "nG = ??\n",
+    "nG = 0\n",
     "print(f'Number of Gs: {nG}')\n",
     "\n",
-    "nC = ??\n",
+    "nC = 0\n",
     "print(f'Number of Cs: {nC}')\n",
     "\n",
-    "nGC = ??\n",
+    "nGC = 0\n",
     "\n",
     "GC_content = (nGC/dnaLength)*100\n",
     "print(GC_content)"
@@ -152,7 +152,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While that's not terribly tedious, what if we needed to do this for 10,000 different dna sequences? We will definitely need a way to more quickly perform these actions. What we need to do is 'functionalize' this process so we can effectively turn it into a reuseable command. So lets create a function to do all of this for us. We start by defining the function with the `def` statement to define the function's name, followed by a pair of parentheses `()` where we can name a few 'parameters' (another name for variables passed to a function) that we will use within our function. This is then followed by the code block to execute when we 'call' the function. At the end of the function, we specify what values we want to return with `return()`."
+    "While that's not terribly tedious, what if we needed to do this for 100,000 different dna sequences (not an uncommon task or scale in genomics)? \n",
+    "\n",
+    "We will definitely need a way to more quickly perform these actions. \n",
+    "\n",
+    "What we need to do is 'functionalize' this process so we can effectively turn it into a reuseable command. \n",
+    "\n",
+    "So lets create a function to do all of this for us. \n",
+    "\n",
+    "We start by defining the function with the `def` statement to define the function's name, followed by a pair of parentheses `()` where we can name a few 'parameters' (another name for variables passed to a function) that we will use within our function. This is then followed by the code block to execute when we 'call' the function. At the end of the function, we specify what values we want to return with `return()`."
    ]
   },
   {
@@ -163,9 +171,9 @@
    "source": [
     "def getGC(seq):\n",
     "    dnaLength = len(seq)\n",
-    "    nG = ??\n",
-    "    nC = ??\n",
-    "    nGC = ??\n",
+    "    nG = 0\n",
+    "    nC = 0\n",
+    "    nGC = 0\n",
     "    GC_content = (nGC/dnaLength)*100\n",
     "    return(GC_content)"
    ]
@@ -174,7 +182,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once we've created our function, we can then call it as many times as we want with different values passed to the `seq` argument as needed. ** Note the terminology difference: the names given in the function definition are called parameters, but the values you supply in the function call are called arguments. **"
+    "Once we've created our function, we can then call it as many times as we want with different values passed to the `seq` argument as needed. \n",
+    "\n",
+    "*Note the terminology difference: the names given in the function definition are called parameters, but the values you supply in the function call are called arguments.*"
    ]
   },
   {
@@ -249,7 +259,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By default, unnamed arguments passed to a function will be interpreted positionally. Above, notice that we can omit `seq = dna` in the function call. However, you also instead be explicit with the keywords, in which case the positions of the arguments aren't meaningful. An important rule is that positional arguments have to be provided before named arguments. For example, the following code will generate an error:"
+    "By default, unnamed arguments passed to a function will be interpreted positionally. Above, notice that we can omit `seq = dna` in the function call. \n",
+    "\n",
+    "However, you also instead be explicit with the keywords, in which case the positions of the arguments aren't meaningful. An important rule is that positional arguments have to be provided before named arguments. For example, the following code will generate an error:"
    ]
   },
   {
@@ -258,14 +270,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(checkDNA(seq = dna, \"TGCA\"))"
+    "print(checkDNA(seq = dna,\"TGCA\"))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now lets try and create a new function that takes a DNA sequence as an argument and calculates the melting temperature (the temperature at which two DNA strands will separate from each other). This property is a function of the DNA sequence itself. For sequences less than 14 nucleotides the formula is: `Tm= (A+T) * 2 + (G+C) * 4`. For sequences longer than 13 nucleotides in length, there is a different equation: `Tm= 64.9 +41*(G+C-16.4)/(A+T+G+C)`. In each equation, `A, T, G, and C` correspond to the number of each nucleotide in the DNA string. Can you define a single function that can test a DNA sequence of any length?"
+    "Group Exercise:\n",
+    "\n",
+    "Now lets try and create a new function that takes a DNA sequence as an argument and calculates the melting temperature (the temperature at which two DNA strands will separate from each other). \n",
+    "\n",
+    "This property is a function of the DNA sequence itself. For sequences less than 14 nucleotides the formula is: $T_m(\\degree C) = (A+T) * 2 + (G+C) * 4$. For sequences longer than 13 nucleotides in length, there is a different equation: $T_m(\\degree C) = 64.9 +\\frac{41*(G+C-16.4)}{(A+T+G+C)}$. \n",
+    "\n",
+    "In each equation, `A, T, G, and C` correspond to the number of each nucleotide in the DNA string. Please define a single function that can test a DNA sequence of any length?"
    ]
   },
   {
@@ -306,7 +324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This tells the python interpreter to load all of the functions and elements found in the `math` module into the current session. `math` is a 'standard module' that is included with python.  To use a specific function or variable defined in `math` you can call it using the dot (`.`) operator along with the module name"
+    "This tells the python interpreter to load all of the functions and elements found in the `math` module (located within the python path) into the current session. `math` is a 'standard module' that is included with python.  To use a specific function or variable defined in `math` you can call it using the dot (`.`) operator along with the module name"
    ]
   },
   {
@@ -384,14 +402,17 @@
     "import datetime as dt\n",
     "\n",
     "today = dt.date.today()\n",
-    "print(\"Today is\", today)"
+    "print(f\"Today is {today}\")\n",
+    "\n",
+    "tomorrow = today + dt.timedelta(days=1)\n",
+    "print(f\"Tomorrow is {tomorrow}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we imported the datetime module as `dt` . Notice that that the `dt` module defines a class called `date`. Then, we used the `date.today()` function to get the current local date, which is then printed with some accessory text using the `print()` function."
+    "Here, we imported the datetime module as `dt` . Notice that that the `dt` module defines a class called `date`. Then, we used the `date.today()` method (a function designed for a specific class) to get the current local date, which is then printed with some accessory text using the `print()` function."
    ]
   },
   {
@@ -421,13 +442,6 @@
     "#### Exercise\n",
     "1. Create a function to calculate the volume of a sphere using the radius as an arugment. (hint: use a module to find $\\pi$)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -507,9 +521,10 @@
     "head = [next(chrIII) for x in range(numLines)] # Using list comprehension to return a list of values from some operation\n",
     "\n",
     "print(head)\n",
-    "    \n",
-    "for line in head:\n",
-    "    print(line)\n"
+    "\n",
+    "# .decode() to convert byte-string (b'') to a string ('')\n",
+    "\n",
+    "# .strip() to remove the newline character ('\\n') from the end of each line\n"
    ]
   },
   {
@@ -570,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +644,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we just need to know how to access these arguments from within the script. From the `sys` module we used above, arguments can be accessed `sys.argv`. The first element (`sys.argv[0]`) will be the name of the script that was called. The rest of the elements (`sys.argv[1], sys.argv[2], ..., sys.argv[n]`) are the command line arguments, represented as strings. With this knowledge (and everything you've learned so far!) we should be able to make our script interactive."
+    "Now we just need to know how to access these arguments from within the script. From the `sys` module we used above, arguments can be accessed `sys.argv`. The first element (`sys.argv[0]`) will be the name of the script that was called. The rest of the elements (`sys.argv[1], sys.argv[2], ..., sys.argv[n]`) are the command line arguments, represented as strings. \n",
+    "\n",
+    "With this knowledge (and everything you've learned so far!) we should be able to make our script interactive."
    ]
   },
   {
@@ -661,7 +678,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
