through day3, some reorg complete

--- a/day3/notebooks/Day3_Afternoon_tidying.ipynb
+++ b/day3/notebooks/Day3_Afternoon_tidying.ipynb
@@ -62,15 +62,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now - let's try to load some of the data we have in the `data` directory.  First - just take a look at the data (`tb_2014.csv`) by navigating to it in your file folder and opening it in jupyter like so:\n",
-    "<img src=\"files/browser_tb.JPG\">"
+    "Now - let's try to load some of the data we have in the `data` directory.  First - just take a look at the data (`tb_2014.csv`) by navigating to it in your file folder and opening it in jupyter like so (I have rainbow_CSV on leading to the colors):\n",
+    "<img src=\"files/tb_2014_rainbow.png\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that this data is a typical spreadsheet with columns and rows as you'd expect from Excel or other tools. CSV stands for **C**omma **S**eparated **V**ariables.\n",
+    "You could also open this in excel if you prefer - by downloading the csv and opening it.\n",
+    "\n",
+    "We can see that this data is a typical spreadsheet with columns and rows. CSV stands for **C**omma **S**eparated **V**ariables.\n",
     "\n",
     "This data is information about tuberculosis prevalance from the UN WHO from 1980-2014.  There is a `country` column, then the `iso2` and `iso3` columns which appear to be appreviations (2 and 3 letter) of the country name.  A `year` column which is self explanatory.   \n",
     "Then there are columns for data - where the column name means:\n",
@@ -95,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -468,13 +470,13 @@
        "[7240 rows x 60 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tb_raw=pd.read_csv('~/bcmb_bootcamp/day3/data/tb_2014.csv')\n",
+    "tb_raw=pd.read_csv('../data/tb_2014.csv')\n",
     "tb_raw"
    ]
   },
@@ -492,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +867,7 @@
        "[7240 rows x 58 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1025,7 @@
        "[405440 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,11 +1057,11 @@
        "3         new_sp_m014\n",
        "4         new_sp_m014\n",
        "             ...     \n",
-       "405435    new_rel_f65\n",
-       "405436    new_rel_f65\n",
-       "405437    new_rel_f65\n",
-       "405438    new_rel_f65\n",
-       "405439    new_rel_f65\n",
+       "405435     newrel_f65\n",
+       "405436     newrel_f65\n",
+       "405437     newrel_f65\n",
+       "405438     newrel_f65\n",
+       "405439     newrel_f65\n",
        "Name: variable, Length: 405440, dtype: object"
       ]
      },
@@ -1081,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1211,7 +1213,7 @@
        "[405440 rows x 4 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1348,7 +1350,7 @@
        "[405440 rows x 3 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1366,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1532,7 +1534,7 @@
        "[405440 rows x 7 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1551,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1573,7 @@
        "Name: sex_age, Length: 405440, dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1582,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1772,7 +1774,7 @@
        "[405440 rows x 9 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1792,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1801,7 +1803,7 @@
        "array(['014', '1524', '2534', '3544', '4554', '5564', '65'], dtype=object)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1812,7 +1814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1978,7 +1980,7 @@
        "[405440 rows x 7 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2004,7 +2006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2033,7 +2035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2042,7 +2044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2208,7 +2210,7 @@
        "[11872 rows x 7 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2219,7 +2221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2385,7 +2387,7 @@
        "[11872 rows x 7 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2404,7 +2406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2570,7 +2572,7 @@
        "[2329 rows x 7 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2589,7 +2591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2755,7 +2757,7 @@
        "[1334 rows x 7 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2778,7 +2780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2908,7 +2910,7 @@
        "94208  Algeria  2000  312.0     new   sp   f    65+"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2919,7 +2921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2940,7 +2942,7 @@
        "Name: value, Length: 168, dtype: float64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2960,16 +2962,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "407.0"
+       "np.float64(407.0)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2987,7 +2989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -3016,7 +3018,7 @@
        "      dtype='object', name='country')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3036,7 +3038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -3202,7 +3204,7 @@
        "[11872 rows x 7 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3493,7 +3495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
