getting ready for day1

--- a/day1/notebooks/Day1.2_Afternoon_Unix_and_Bash.ipynb
+++ b/day1/notebooks/Day1.2_Afternoon_Unix_and_Bash.ipynb
@@ -106,26 +106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total 25904\n",
-      "-rw-r--r--  1 timp  staff   763B Aug 13 08:50 Day1-overview.md\n",
-      "-rw-r--r--  1 timp  staff   1.8M Aug 14 09:41 Day1.1_Morning_Unix_I.ipynb\n",
-      "-rw-r--r--  1 timp  staff   159K Aug 14 10:03 Day1.2_Afternoon_Unix_and_Bash.ipynb\n",
-      "-rw-r--r--  1 timp  staff   229K Oct 25  2019 chr01.fsa\n",
-      "drwxr-xr-x  4 timp  staff   128B Aug 13 08:50 \u001b[34mdata\u001b[m\u001b[m\n",
-      "drwxr-xr-x  3 timp  staff    96B Aug 13 08:50 \u001b[34mimages\u001b[m\u001b[m\n",
-      "-rw-r--r--  1 timp  staff    10M Apr 25 14:00 knownGene.txt.gz\n",
-      "-rw-r--r--  1 timp  staff   1.8K Aug 14 09:38 tail.txt\n",
-      "-rw-r--r--  1 timp  staff   528B Aug 13 08:50 test.fa\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
     "ls -lh"
@@ -450,56 +433,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "chr1\n",
-      "chr1\n",
-      "chr1\n",
-      "chr1\n",
-      "chr1\n",
-      "chr1\n",
-      "chr1\n",
-      "chr1\n",
-      "chr1\n",
-      "chr1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
     "# just doing the first 10 lines by piping the output to head\n",
-    "cut -f1 data/hg38genes.txt | head\n",
-    "b"
+    "cut -f1 data/hg38genes.txt | head"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11874\t14409\n",
-      "14362\t29370\n",
-      "17369\t17436\n",
-      "30366\t30503\n",
-      "34611\t36081\n",
-      "69091\t70008\n",
-      "134773\t140566\n",
-      "450740\t451678\n",
-      "490756\t495445\n",
-      "632325\t632413\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
@@ -556,40 +504,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "chr1\n",
-      "chr10\n",
-      "chr11\n",
-      "chr12\n",
-      "chr13\n",
-      "chr14\n",
-      "chr15\n",
-      "chr16\n",
-      "chr17\n",
-      "chr18\n",
-      "chr19\n",
-      "chr2\n",
-      "chr20\n",
-      "chr21\n",
-      "chr22\n",
-      "chr23\n",
-      "chr24\n",
-      "chr3\n",
-      "chr4\n",
-      "chr5\n",
-      "chr6\n",
-      "chr7\n",
-      "chr8\n",
-      "chr9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash \n",
     "#Find unique chromosome names\n",
